# xtrc8

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/xtractr/: __init__.py  cli.py  clip.py  extract.py  tweets.py  util.py
src/xtrc8/: clip.py  extract.py  tweets.py
tests/: test_tweet_ops.py
