[project]
name = "xtractr"
version = "0.1.0"
description = "Web, PDF, and Twitter/X content extraction tools"
requires-python = ">=3.11"

dependencies = [
    "rich>=13.7",
    "pymupdf>=1.24",
    "pymupdf4llm>=1.27.2",
    "trafilatura>=2.0.0",
    "httpx>=0.27",
    "playwright>=1.40",
    "textual>=3.0",
    "deep-translator>=1.11.4",
]

[project.scripts]
xtractr = "xtractr.cli:main"
# Short aliases
xc = "xtractr.clip:main"
xt = "xtractr.tweets:main"
xe = "xtractr.extract:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
