[project]
name = "xtrc8"
version = "0.1.0"
description = "Web, PDF, and Twitter/X content extraction tools"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "rich>=13.7",
    "pymupdf>=1.24",
    "pymupdf4llm>=1.27.2",
    "trafilatura>=2.0.0",
    "httpx>=0.27",
    "playwright>=1.40",
    "textual>=3.0",
    "deep-translator>=1.11.4",
    "yt-dlp>=2024.12",
]

[project.scripts]
xtrc8 = "xtrc8.cli:main"
# Short aliases
xc = "xtrc8.clip:main"
xt = "xtrc8.tweets:main"
xe = "xtrc8.extract:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
